# neural-ode

./: .gitignore  Dockerfile  README.md  data_loader.py  main.py  model.py  pyproject.toml  training.py
notebooks/: odes.ipynb
