[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neural-ode"
version = "0.1.0"
description = "A JAX-based implementation of Neural Ordinary Differential Equations."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]

dependencies = [
    "jax[cpu]",
    "equinox",
    "diffrax",
    "optax",
    "matplotlib"
]

[project.scripts]
train_node = "neural_ode.main:main"

[tool.setuptools.packages.find]
where = ["src"]